--- a/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -188,8 +188,8 @@ bPreloadProjectPluginModules=True
 LastLevel=/Game/Levels/L_Fps
 
 [ModuleFileTracking]
-FPS_GAME.TimeStamp=2023.10.31-16.42.25
-FPS_GAME.LastCompileMethod=Runtime
+FPS_GAME.TimeStamp=2023.11.03-23.33.04
+FPS_GAME.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.10.09-11.23.52
 StorageServerClient.LastCompileMethod=Unknown
 CookOnTheFly.TimeStamp=2023.10.09-11.23.45
@@ -2482,7 +2482,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2498,7 +2498,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../../../Users/natal/Documents/University/Advanced Game Engine/AdvancedEngine_Assignment/FPS_GAME/Content/Levels
+UNR=G:/Projects/UE5_Assesment/FPS_GAME/Content/Levels
 BRUSH=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBX=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBXAnim=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
@@ -2513,6 +2513,7 @@ Project=C:/Program Files/Epic Games/UE_5.2/
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCustomWidgetExpansion]
