Fixed inverted camera

--- a/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -191,7 +191,7 @@ bPreloadProjectPluginModules=True
 LastLevel=/Game/Levels/L_Fps
 
 [ModuleFileTracking]
-FPS_GAME.TimeStamp=2023.11.08-18.36.50
+FPS_GAME.TimeStamp=2023.11.08-19.30.02
 FPS_GAME.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.11.03-23.56.40
 StorageServerClient.LastCompileMethod=External
@@ -1286,7 +1286,7 @@ InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Objec
 SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1425,18 +1425,19 @@ MaterialExpression="\"Object\" "
 MaterialExpressionTextureSample="\"Object\" "
 MaterialExpressionTextureBase="\"Object\" "
 LandscapeGizmoRenderComponent="\"Object\" "
+BrushComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widgets/WB_Timer
-MRUItem1=/Game/Blueprints/BP_Rocks1
-MRUItem2=/Game/Models/Drones/Materials/M_DRONE_LIGHT
-MRUItem3=/Game/Models/Drones/Materials/M_DRONE_LIGHT_NEON
-MRUItem4=/Game/Blueprints/Lava/BP_Lava
-MRUItem5=/Game/Character/BP_MainCharacter
-MRUItem6=/Game/Character/Input/IMC_CharacterMapping
+MRUItem0=/Game/Character/Input/IMC_CharacterMapping
+MRUItem1=/Game/Widgets/WB_Timer
+MRUItem2=/Game/Blueprints/BP_Rocks1
+MRUItem3=/Game/Models/Drones/Materials/M_DRONE_LIGHT
+MRUItem4=/Game/Models/Drones/Materials/M_DRONE_LIGHT_NEON
+MRUItem5=/Game/Blueprints/Lava/BP_Lava
+MRUItem6=/Game/Character/BP_MainCharacter
 MRUItem7=/Game/Levels/L_Fps
 MRUItem8=/Game/Widgets/WB_PlayerHealth
 MRUItem9=/Game/Images/UI/T_HealthUI1
@@ -2696,7 +2697,7 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../../../Users/natal/Documents/University/Advanced Game Engine/UE5_Assesment/FPS_GAME/Content/Levels
+UNR=../../../../../_Work/University/Year 3/UE5_Assesment/FPS_GAME/Content/Levels
 BRUSH=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBX=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBXAnim=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
@@ -2711,6 +2712,7 @@ Project=C:/Program Files/Epic Games/UE_5.2/
 
 [Python]
 LastDirectory=
+RecentsFiles=F:/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
