--- a/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -191,8 +191,8 @@ bPreloadProjectPluginModules=True
 LastLevel=/Game/Levels/L_Fps
 
 [ModuleFileTracking]
-FPS_GAME.TimeStamp=2023.11.13-19.50.54
-FPS_GAME.LastCompileMethod=Runtime
+FPS_GAME.TimeStamp=2023.11.16-19.06.07
+FPS_GAME.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.11.03-23.56.40
 StorageServerClient.LastCompileMethod=External
 CookOnTheFly.TimeStamp=2023.11.03-23.55.44
@@ -1233,7 +1233,7 @@ AnimationEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 LandscapeEditorObject="\"Object\" "
 EditorStyleSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
@@ -1466,32 +1466,32 @@ AnimationAsset="\"Object\" "
 BoxComponent="\"Object\" \"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BP_Lava_C="\"Object.Actor.Tags\" "
 Lava="\"Object.Actor.Tags\" "
+GameOverBP_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/BP_Lava.BP_Lava
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Lava
-MRUItem1=/Game/Character/BP_MainCharacter
-MRUItem2=/Game/Blueprints/BP_CheckPoints
-MRUItem3=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action
-MRUItem4=/Game/Models/Collecitibles/Heart_PhysicsAsset
-MRUItem5=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action_001
-MRUItem6=/Game/Textures/Landscape/M_Landscape_Inst1
-MRUItem7=/Game/Textures/Landscape/M_Landscape
-MRUItem8=/Game/Textures/Landscape/Lava/M_Lava_Rocks
-MRUItem9=/Game/Blueprints/BP_StaticPlatform
-MRUItem10=/Game/Models/Platforms/Materials/M_PLATFORM
-MRUItem11=/Game/Widgets/WB_PlayerHealth
-MRUItem12=/Game/Widgets/WB_Timer
-MRUItem13=/Game/Character/Input/IMC_CharacterMapping
-MRUItem14=/Game/Blueprints/BP_Rocks1
-MRUItem15=/Game/Models/Drones/Materials/M_DRONE_LIGHT
-MRUItem16=/Game/Models/Drones/Materials/M_DRONE_LIGHT_NEON
-MRUItem17=/Game/Blueprints/Lava/BP_Lava
-MRUItem18=/Game/Levels/L_Fps
-MRUItem19=/Game/Images/UI/T_HealthUI1
+MRUItem0=/Game/Widgets_UI/crosshairBP
+MRUItem1=/Game/Widgets_UI/crosshair
+MRUItem2=/Game/Widgets_UI/GameOverBP
+MRUItem3=/Game/Blueprints/BP_Lava
+MRUItem4=/Game/Character/BP_MainCharacter
+MRUItem5=/Game/Blueprints/BP_CheckPoints
+MRUItem6=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action
+MRUItem7=/Game/Models/Collecitibles/Heart_PhysicsAsset
+MRUItem8=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action_001
+MRUItem9=/Game/Textures/Landscape/M_Landscape_Inst1
+MRUItem10=/Game/Textures/Landscape/M_Landscape
+MRUItem11=/Game/Textures/Landscape/Lava/M_Lava_Rocks
+MRUItem12=/Game/Blueprints/BP_StaticPlatform
+MRUItem13=/Game/Models/Platforms/Materials/M_PLATFORM
+MRUItem14=/Game/Widgets/WB_PlayerHealth
+MRUItem15=/Game/Widgets/WB_Timer
+MRUItem16=/Game/Character/Input/IMC_CharacterMapping
+MRUItem17=/Game/Blueprints/BP_Rocks1
+MRUItem18=/Game/Models/Drones/Materials/M_DRONE_LIGHT
+MRUItem19=/Game/Models/Drones/Materials/M_DRONE_LIGHT_NEON
 
 [DetailCategories]
 LandscapeEditorObject.New Landscape=True
@@ -2718,6 +2718,19 @@ BP_Lava_C.Default=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
 BP_Lava_C.DataLayers=True
+GameOverBP_C.Appearance=True
+GameOverBP_C.Input=True
+GameOverBP_C.Accessibility=True
+GameOverBP_C.Interaction=True
+GameOverBP_C.Designer=True
+GameOverBP_C.Performance=True
+GameOverBP_C.Behavior=True
+GameOverBP_C.Render Transform=True
+GameOverBP_C.Clipping=True
+GameOverBP_C.Navigation=True
+GameOverBP_C.Localization=True
+GameOverBP_C.Layout=True
+Texture2D.Interchange =True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2914,7 +2927,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Widgets_UI
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2974,11 +2987,11 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [Directories2]
-UNR=../../../../../../Users/natal/Documents/University/Advanced Game Engine/UE5_Assesment/FPS_GAME/Content/Levels
+UNR=G:/Projects/UE5_Assesment/FPS_GAME/Content/Levels
 BRUSH=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBX=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBXAnim=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
-GenericImport=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
+GenericImport=../../../../Users/anjum/Desktop/UNI STOFF/ammobar.png
 GenericExport=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 GenericOpen=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 GenericSave=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
@@ -2989,9 +3002,9 @@ Project=C:/Program Files/Epic Games/UE_5.2/
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=F:/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Jump.AI_Jump,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Look.AI_Look,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Move.AI_Move,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Damage.AI_Damage,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Health.AI_Health
@@ -3025,13 +3038,16 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 /Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action.Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action=1
 /Game/Blueprints/BP_CheckPoints.BP_CheckPoints=1
 /Game/Blueprints/BP_Lava.BP_Lava=1
+/Game/Widgets_UI/GameOverBP.GameOverBP=1
+/Game/Widgets_UI/crosshair.crosshair=1
+/Game/Widgets_UI/crosshairBP.crosshairBP=1
 
 [PathColor]
 /Game/Blueprints=(R=0.000000,G=0.189032,B=0.467784,A=1.000000)
 /Game/Character=(R=0.467784,G=0.022316,B=0.000000,A=1.000000)
 /Game/Levels=(R=0.133305,G=0.118312,B=0.234375,A=1.000000)
 /Game/Models=(R=0.366329,G=0.467784,B=0.171386,A=1.000000)
-/Game/Widgets=(R=0.467784,G=0.197621,B=0.373875,A=1.000000)
+/Game/Widgets_UI=(R=0.467784,G=0.197621,B=0.373875,A=1.000000)
 /Game/Images=(R=0.467784,G=0.437997,B=0.433328,A=1.000000)
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
