--- a/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1233,7 +1233,7 @@ AnimationEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+Object="\"Object\" "
 LandscapeEditorObject="\"Object\" "
 EditorStyleSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
@@ -1297,21 +1297,21 @@ SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object\" \"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object\" \"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object\" \"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object\" "
 SpringArmComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" \"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
-Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ProgressBar="\"Object\" \"Object.Progress.BorderPadding\" \"Object.Appearance.FillColorAndOpacity\" "
-TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
-Image="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 WB_PlayerHealth_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 Texture2D="\"Object\" "
@@ -1467,31 +1467,34 @@ BoxComponent="\"Object\" \"Object.Shape.BoxExtent\" \"Object.Collision.BodyInsta
 BP_Lava_C="\"Object.Actor.Tags\" "
 Lava="\"Object.Actor.Tags\" "
 GameOverBP_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+WB_Crosshair_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widgets_UI/crosshairBP
-MRUItem1=/Game/Widgets_UI/crosshair
-MRUItem2=/Game/Widgets_UI/GameOverBP
-MRUItem3=/Game/Blueprints/BP_Lava
-MRUItem4=/Game/Character/BP_MainCharacter
-MRUItem5=/Game/Blueprints/BP_CheckPoints
-MRUItem6=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action
-MRUItem7=/Game/Models/Collecitibles/Heart_PhysicsAsset
-MRUItem8=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action_001
-MRUItem9=/Game/Textures/Landscape/M_Landscape_Inst1
-MRUItem10=/Game/Textures/Landscape/M_Landscape
-MRUItem11=/Game/Textures/Landscape/Lava/M_Lava_Rocks
-MRUItem12=/Game/Blueprints/BP_StaticPlatform
-MRUItem13=/Game/Models/Platforms/Materials/M_PLATFORM
-MRUItem14=/Game/Widgets/WB_PlayerHealth
-MRUItem15=/Game/Widgets/WB_Timer
-MRUItem16=/Game/Character/Input/IMC_CharacterMapping
-MRUItem17=/Game/Blueprints/BP_Rocks1
-MRUItem18=/Game/Models/Drones/Materials/M_DRONE_LIGHT
-MRUItem19=/Game/Models/Drones/Materials/M_DRONE_LIGHT_NEON
+MRUItem0=/Game/Character/BP_MainCharacter
+MRUItem1=/Game/Widgets_UI/btn
+MRUItem2=/Game/Widgets_UI/WB_GameOver
+MRUItem3=/Game/Widgets_UI/WB_Crosshair
+MRUItem4=/Game/Widgets_UI/crosshairBP
+MRUItem5=/Game/Widgets_UI/crosshair
+MRUItem6=/Game/Widgets_UI/GameOverBP
+MRUItem7=/Game/Blueprints/BP_Lava
+MRUItem8=/Game/Blueprints/BP_CheckPoints
+MRUItem9=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action
+MRUItem10=/Game/Models/Collecitibles/Heart_PhysicsAsset
+MRUItem11=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action_001
+MRUItem12=/Game/Textures/Landscape/M_Landscape_Inst1
+MRUItem13=/Game/Textures/Landscape/M_Landscape
+MRUItem14=/Game/Textures/Landscape/Lava/M_Lava_Rocks
+MRUItem15=/Game/Blueprints/BP_StaticPlatform
+MRUItem16=/Game/Models/Platforms/Materials/M_PLATFORM
+MRUItem17=/Game/Widgets/WB_PlayerHealth
+MRUItem18=/Game/Widgets/WB_Timer
+MRUItem19=/Game/Character/Input/IMC_CharacterMapping
 
 [DetailCategories]
 LandscapeEditorObject.New Landscape=True
@@ -1882,7 +1885,7 @@ TextBlock.Layout=True
 TextBlock.Content=True
 TextBlock.Appearance=True
 TextBlock.Accessibility=True
-TextBlock.Performance=True
+TextBlock.Performance=False
 TextBlock.Clipping=True
 TextBlock.Wrapping=True
 TextBlock.Behavior=True
@@ -2730,6 +2733,29 @@ GameOverBP_C.Clipping=True
 GameOverBP_C.Navigation=True
 GameOverBP_C.Localization=True
 GameOverBP_C.Layout=True
+Texture2D.Interchange=True
+WB_Crosshair_C.Appearance=True
+WB_Crosshair_C.Input=True
+WB_Crosshair_C.Interaction=True
+WB_Crosshair_C.Designer=True
+WB_Crosshair_C.Performance=True
+WB_Crosshair_C.Layout=True
+WB_Crosshair_C.Behavior=True
+WB_Crosshair_C.Render Transform=True
+WB_Crosshair_C.Localization=True
+WB_Crosshair_C.Accessibility=True
+WB_Crosshair_C.Clipping=True
+WB_Crosshair_C.Navigation=True
+Button.Layout=True
+Button.Appearance=False
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
 Texture2D.Interchange =True
 
 [PlacementMode]
@@ -2927,7 +2953,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Widgets_UI
+ContentBrowserTab1.SelectedPaths=/Game/Character
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2991,7 +3017,7 @@ UNR=G:/Projects/UE5_Assesment/FPS_GAME/Content/Levels
 BRUSH=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBX=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBXAnim=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
-GenericImport=../../../../Users/anjum/Desktop/UNI STOFF/ammobar.png
+GenericImport=../../../../Users/anjum/Desktop/UNI STOFF/btn2.png
 GenericExport=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 GenericOpen=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 GenericSave=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
@@ -3041,6 +3067,9 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 /Game/Widgets_UI/GameOverBP.GameOverBP=1
 /Game/Widgets_UI/crosshair.crosshair=1
 /Game/Widgets_UI/crosshairBP.crosshairBP=1
+/Game/Widgets_UI/WB_Crosshair.WB_Crosshair=1
+/Game/Widgets_UI/btn.btn=1
+/Game/Widgets_UI/WB_GameOver.WB_GameOver=1
 
 [PathColor]
 /Game/Blueprints=(R=0.000000,G=0.189032,B=0.467784,A=1.000000)
