vertical move platform

--- a/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -191,7 +191,7 @@ bPreloadProjectPluginModules=True
 LastLevel=/Game/Levels/L_Fps
 
 [ModuleFileTracking]
-FPS_GAME.TimeStamp=2023.11.20-12.47.58
+FPS_GAME.TimeStamp=2023.11.20-15.40.42
 FPS_GAME.LastCompileMethod=Runtime
 StorageServerClient.TimeStamp=2023.11.03-23.56.40
 StorageServerClient.LastCompileMethod=External
@@ -1322,7 +1322,7 @@ SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
 SkyAtmosphere="\"Object.Atmosphere.SkyAtmosphereComponent.Object.GroundAlbedo\" "
 DirectionalLight="\"Object.Light.DirectionalLightComponent.Object.Light.LightColor\" "
-Light=
+Light="\"Object.Light.DirectionalLightComponent.Object.Light.LightColor\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1475,28 +1475,29 @@ StaticMesh="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/BP_MoveablePlatformVertical.BP_MoveablePlatformVertical
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_StaticPlatform
-MRUItem1=/Game/Blueprints/BP_MoveablePlatform
-MRUItem2=/Game/Models/Platforms/Materials/M_Platform_Move
-MRUItem3=/Game/Models/Platforms/SK_Platform_Move
-MRUItem4=/Game/Blueprints/BP_Lava
-MRUItem5=/Game/Character/BP_MainCharacter
-MRUItem6=/Game/Widgets_UI/WB_GameOver
-MRUItem7=/Game/Widgets_UI/btn
-MRUItem8=/Game/Widgets_UI/WB_Crosshair
-MRUItem9=/Game/Widgets_UI/crosshairBP
-MRUItem10=/Game/Widgets_UI/crosshair
-MRUItem11=/Game/Widgets_UI/GameOverBP
-MRUItem12=/Game/Blueprints/BP_CheckPoints
-MRUItem13=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action
-MRUItem14=/Game/Models/Collecitibles/Heart_PhysicsAsset
-MRUItem15=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action_001
-MRUItem16=/Game/Textures/Landscape/M_Landscape_Inst1
-MRUItem17=/Game/Textures/Landscape/M_Landscape
-MRUItem18=/Game/Textures/Landscape/Lava/M_Lava_Rocks
-MRUItem19=/Game/Models/Platforms/Materials/M_PLATFORM
+MRUItem0=/Game/Blueprints/BP_MoveablePlatformVertical
+MRUItem1=/Game/Blueprints/BP_StaticPlatform
+MRUItem2=/Game/Blueprints/BP_MoveablePlatform
+MRUItem3=/Game/Models/Platforms/Materials/M_Platform_Move
+MRUItem4=/Game/Models/Platforms/SK_Platform_Move
+MRUItem5=/Game/Blueprints/BP_Lava
+MRUItem6=/Game/Character/BP_MainCharacter
+MRUItem7=/Game/Widgets_UI/WB_GameOver
+MRUItem8=/Game/Widgets_UI/btn
+MRUItem9=/Game/Widgets_UI/WB_Crosshair
+MRUItem10=/Game/Widgets_UI/crosshairBP
+MRUItem11=/Game/Widgets_UI/crosshair
+MRUItem12=/Game/Widgets_UI/GameOverBP
+MRUItem13=/Game/Blueprints/BP_CheckPoints
+MRUItem14=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action
+MRUItem15=/Game/Models/Collecitibles/Heart_PhysicsAsset
+MRUItem16=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action_001
+MRUItem17=/Game/Textures/Landscape/M_Landscape_Inst1
+MRUItem18=/Game/Textures/Landscape/M_Landscape
+MRUItem19=/Game/Textures/Landscape/Lava/M_Lava_Rocks
 
 [DetailCategories]
 LandscapeEditorObject.New Landscape=True
@@ -2795,8 +2796,22 @@ BP_MoveablePlatform_C.Events=True
 BP_MoveablePlatform_C.TransformCommon=True
 BP_MoveablePlatform_C.Networking=True
 BP_MoveablePlatform_C.MoveablePlatform=True
+BP_MoveablePlatformVertical_C.MoveablePlatformVertical=True
+BP_MoveablePlatformVertical_C.Tick=True
+BP_MoveablePlatformVertical_C.Replication=True
+BP_MoveablePlatformVertical_C.Rendering=True
+BP_MoveablePlatformVertical_C.Collision=True
+BP_MoveablePlatformVertical_C.Actor=True
+BP_MoveablePlatformVertical_C.Input=True
+BP_MoveablePlatformVertical_C.HLOD=True
+BP_MoveablePlatformVertical_C.Physics=True
+BP_MoveablePlatformVertical_C.WorldPartition=True
+BP_MoveablePlatformVertical_C.Events=True
+BP_MoveablePlatformVertical_C.TransformCommon=True
+BP_MoveablePlatformVertical_C.Networking=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_MoveablePlatformVertical.BP_MoveablePlatformVertical;
 RecentlyPlaced=/Game/Blueprints/BP_MoveablePlatform.BP_MoveablePlatform;
 RecentlyPlaced=/Game/Models/Platforms/SK_Platform_Move.SK_Platform_Move;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2816,7 +2831,6 @@ RecentlyPlaced=/Game/Models/Collecitibles/SM_Clock.SM_Clock;
 RecentlyPlaced=/Game/Models/Collecitibles/SK_Heart_Skeleton.SK_Heart_Skeleton;
 RecentlyPlaced=/Game/Models/Collecitibles/M_Heart.M_Heart;
 RecentlyPlaced=/Game/Models/Collecitibles/SK_Heart.SK_Heart;
-RecentlyPlaced=/Game/Models/Lava/S_Lava.S_Lava;
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2991,7 +3005,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Widgets_UI
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3112,6 +3126,7 @@ CharacterMovementComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
 /Game/Models/Platforms/SK_Platform_Move.SK_Platform_Move=1
 /Game/Models/Platforms/Materials/M_Platform_Move.M_PLATFORM_MOVE=1
 /Game/Blueprints/BP_MoveablePlatform.BP_MoveablePlatform=1
+/Game/Blueprints/BP_MoveablePlatformVertical.BP_MoveablePlatformVertical=1
 
 [PathColor]
 /Game/Blueprints=(R=0.000000,G=0.189032,B=0.467784,A=1.000000)
