completed level design

--- a/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -15,7 +15,7 @@ DataSourceFolder=(Path="")
 bAnimationReimportWarnings=False
 bSCSEditorShowFloor=False
 bAlwaysBuildUAT=True
-SCSViewportCameraSpeed=4
+SCSViewportCameraSpeed=8
 bShowSelectionSubcomponents=True
 AssetViewerProfileName=
 PreviewFeatureLevel=4
@@ -1233,7 +1233,7 @@ AnimationEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object="\"Object\" "
 LandscapeEditorObject="\"Object\" "
 EditorStyleSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
@@ -1295,15 +1295,15 @@ DataAsset="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[8]\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+StaticMeshComponent="\"Object\" "
 CameraComponent="\"Object\" "
 SpringArmComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ShapeComponent="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1501,26 +1501,26 @@ AnimStateTransitionNode="\"Object\" "
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_DissapearingPlatform
+MRUItem0=/Game/Blueprints/BP_Rocks1
 MRUItem1=/Game/Blueprints/BP_StaticPlatform
-MRUItem2=/Game/Levels/L_Fps
-MRUItem3=/Game/Textures/T_WarningSign_Mat_3
-MRUItem4=/Game/Character/Input/AI_Crouch
-MRUItem5=/Game/Textures/T_WarningSign_Mat_2
-MRUItem6=/Game/Textures/T_WarningSign_Mat
-MRUItem7=/Game/Blueprints/BP_Rocks1
-MRUItem8=/Game/Character/Animations/ABP_Character
-MRUItem9=/Game/Character/Input/IMC_CharacterMapping
-MRUItem10=/Game/Blueprints/BP_Lava
-MRUItem11=/Game/Character/BP_MainCharacter
-MRUItem12=/Game/Models/Platforms/Materials/M_PLATFORM_MOVE_NEON
-MRUItem13=/Game/Blueprints/BP_CheckPoints
-MRUItem14=/Game/Widgets_UI/WB_PlayerHealth
-MRUItem15=/Game/Blueprints/BP_SwingingBall
-MRUItem16=/Game/Models/SpikeBall/Materials/M_SmallBalls
-MRUItem17=/Game/Models/SpikeBall/Materials/M_BaseBall
-MRUItem18=/Game/Models/Platforms/Materials/M_PLATFROM_LONG
-MRUItem19=/Game/Blueprints/BP_MoveablePlatformVertical
+MRUItem2=/Game/Blueprints/BP_NonDissapearingPlatform
+MRUItem3=/Game/Blueprints/BP_DissapearingPlatform
+MRUItem4=/Game/Levels/L_Fps
+MRUItem5=/Game/Textures/T_WarningSign_Mat_3
+MRUItem6=/Game/Character/Input/AI_Crouch
+MRUItem7=/Game/Textures/T_WarningSign_Mat_2
+MRUItem8=/Game/Textures/T_WarningSign_Mat
+MRUItem9=/Game/Character/Animations/ABP_Character
+MRUItem10=/Game/Character/Input/IMC_CharacterMapping
+MRUItem11=/Game/Blueprints/BP_Lava
+MRUItem12=/Game/Character/BP_MainCharacter
+MRUItem13=/Game/Models/Platforms/Materials/M_PLATFORM_MOVE_NEON
+MRUItem14=/Game/Blueprints/BP_CheckPoints
+MRUItem15=/Game/Widgets_UI/WB_PlayerHealth
+MRUItem16=/Game/Blueprints/BP_SwingingBall
+MRUItem17=/Game/Models/SpikeBall/Materials/M_SmallBalls
+MRUItem18=/Game/Models/SpikeBall/Materials/M_BaseBall
+MRUItem19=/Game/Models/Platforms/Materials/M_PLATFROM_LONG
 
 [DetailCategories]
 LandscapeEditorObject.New Landscape=True
@@ -2939,8 +2939,21 @@ BP_DissapearingPlatform_C.Variable=True
 BP_DissapearingPlatform_C.Cooking=True
 BP_DissapearingPlatform_C.Shape=True
 BP_DissapearingPlatform_C.Platform=True
+BP_NonDissapearingPlatform_C.Tick=True
+BP_NonDissapearingPlatform_C.Replication=True
+BP_NonDissapearingPlatform_C.Rendering=True
+BP_NonDissapearingPlatform_C.Collision=True
+BP_NonDissapearingPlatform_C.Actor=True
+BP_NonDissapearingPlatform_C.Input=True
+BP_NonDissapearingPlatform_C.HLOD=True
+BP_NonDissapearingPlatform_C.Physics=True
+BP_NonDissapearingPlatform_C.WorldPartition=True
+BP_NonDissapearingPlatform_C.Events=True
+BP_NonDissapearingPlatform_C.TransformCommon=True
+BP_NonDissapearingPlatform_C.Networking=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_NonDissapearingPlatform.BP_NonDissapearingPlatform;
 RecentlyPlaced=/Game/Blueprints/BP_DissapearingPlatform.BP_DissapearingPlatform;
 RecentlyPlaced=/Game/Textures/T_WarningSign_Mat_2.T_WarningSign_Mat_2;
 RecentlyPlaced=/Game/Textures/T_WarningSign.T_WarningSign;
@@ -2960,7 +2973,6 @@ RecentlyPlaced=/Game/Models/Drones/SM_DroneLight.SM_DroneLight;
 RecentlyPlaced=/Game/Models/Drones/SK_DroneLight_Skeleton.SK_DroneLight_Skeleton;
 RecentlyPlaced=/Game/Models/Collecitibles/M_MARK_OUT.M_MARK_OUT;
 RecentlyPlaced=/Game/Models/Collecitibles/M_MARK_IN.M_MARK_IN;
-RecentlyPlaced=/Game/Models/Collecitibles/Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action.Heart_Anim_Retopo_Icosphere_001_Retopo_Icosphere_001Action;
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3135,7 +3147,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Classes_Game/FPS_GAME/Public
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3270,6 +3282,7 @@ PointLightComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
 /Game/Character/Input/AI_Crouch.AI_Crouch=1
 /Game/Textures/T_WarningSign_Mat_3.T_WarningSign_Mat_3=1
 /Game/Blueprints/BP_DissapearingPlatform.BP_DissapearingPlatform=1
+/Game/Blueprints/BP_NonDissapearingPlatform.BP_NonDissapearingPlatform=1
 
 [PathColor]
 /Game/Blueprints=(R=0.000000,G=0.189032,B=0.467784,A=1.000000)
@@ -3392,6 +3405,8 @@ TreeViewWidth=0.300000
 [DetailCategoriesAdvanced]
 DirectionalLight.LightShafts=True
 DirectionalLight.CascadedShadowMaps=True
+BP_NonDissapearingPlatform_C.Tick=False
+BP_NonDissapearingPlatform_C.Replication=False
 
 [MessageLog]
 LastLogListing=PIE
