added complete screen

--- a/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FPS_GAME/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -191,8 +191,8 @@ bPreloadProjectPluginModules=True
 LastLevel=/Game/Levels/L_Fps
 
 [ModuleFileTracking]
-FPS_GAME.TimeStamp=2023.11.27-13.12.20
-FPS_GAME.LastCompileMethod=Runtime
+FPS_GAME.TimeStamp=2023.11.27-21.15.25
+FPS_GAME.LastCompileMethod=External
 StorageServerClient.TimeStamp=2023.11.03-23.56.40
 StorageServerClient.LastCompileMethod=External
 CookOnTheFly.TimeStamp=2023.11.03-23.55.44
@@ -1304,14 +1304,14 @@ CameraComponent="\"Object\" "
 SpringArmComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
-CanvasPanel="\"Object\" "
+CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ProgressBar="\"Object\" \"Object.Progress.BorderPadding\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 WB_PlayerHealth_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Texture2D="\"Object\" "
@@ -1478,10 +1478,10 @@ LocalLightComponent="\"Object\" "
 LightComponent="\"Object\" "
 LightComponentBase="\"Object\" "
 PointLightComponent="\"Object\" "
-BP_MainCharacter_C="\"Object.Camera.FPSCamera.Object.PostProcess.PostProcessSettings\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.MeshArms.FPSMeshArms.Object.Lighting.LightingChannels\" \"Object.MeshArms.FPSMeshArms.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
-MainCharacter="\"Object.Camera.FPSCamera.Object.PostProcess.PostProcessSettings\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.MeshArms.FPSMeshArms.Object.Lighting.LightingChannels\" \"Object.MeshArms.FPSMeshArms.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
-Character="\"Object.Camera.FPSCamera.Object.PostProcess.PostProcessSettings\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.MeshArms.FPSMeshArms.Object.Lighting.LightingChannels\" \"Object.MeshArms.FPSMeshArms.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
-Pawn="\"Object.Camera.FPSCamera.Object.PostProcess.PostProcessSettings\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.MeshArms.FPSMeshArms.Object.Lighting.LightingChannels\" \"Object.MeshArms.FPSMeshArms.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
+BP_MainCharacter_C=
+MainCharacter=
+Character=
+Pawn=
 ABP_Character_C="\"Object\" "
 AnimInstance="\"Object\" "
 AnimGraphNode_Root="\"Object\" "
@@ -1496,31 +1496,33 @@ AnimStateNodeBase="\"Object\" "
 AnimGraphNode_SequencePlayer="\"Object\" "
 AnimGraphNode_AssetPlayerBase="\"Object\" "
 AnimStateTransitionNode="\"Object\" "
+WB_Complete_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Character/BP_MainCharacter.BP_MainCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Rocks1
-MRUItem1=/Game/Blueprints/BP_StaticPlatform
-MRUItem2=/Game/Blueprints/BP_NonDissapearingPlatform
-MRUItem3=/Game/Blueprints/BP_DissapearingPlatform
-MRUItem4=/Game/Levels/L_Fps
-MRUItem5=/Game/Textures/T_WarningSign_Mat_3
-MRUItem6=/Game/Character/Input/AI_Crouch
-MRUItem7=/Game/Textures/T_WarningSign_Mat_2
-MRUItem8=/Game/Textures/T_WarningSign_Mat
-MRUItem9=/Game/Character/Animations/ABP_Character
-MRUItem10=/Game/Character/Input/IMC_CharacterMapping
-MRUItem11=/Game/Blueprints/BP_Lava
-MRUItem12=/Game/Character/BP_MainCharacter
-MRUItem13=/Game/Models/Platforms/Materials/M_PLATFORM_MOVE_NEON
-MRUItem14=/Game/Blueprints/BP_CheckPoints
-MRUItem15=/Game/Widgets_UI/WB_PlayerHealth
-MRUItem16=/Game/Blueprints/BP_SwingingBall
-MRUItem17=/Game/Models/SpikeBall/Materials/M_SmallBalls
-MRUItem18=/Game/Models/SpikeBall/Materials/M_BaseBall
-MRUItem19=/Game/Models/Platforms/Materials/M_PLATFROM_LONG
+MRUItem0=/Game/Character/BP_MainCharacter
+MRUItem1=/Game/Widgets_UI/WB_Complete
+MRUItem2=/Game/Blueprints/BP_Rocks1
+MRUItem3=/Game/Blueprints/BP_StaticPlatform
+MRUItem4=/Game/Blueprints/BP_NonDissapearingPlatform
+MRUItem5=/Game/Blueprints/BP_DissapearingPlatform
+MRUItem6=/Game/Levels/L_Fps
+MRUItem7=/Game/Textures/T_WarningSign_Mat_3
+MRUItem8=/Game/Character/Input/AI_Crouch
+MRUItem9=/Game/Textures/T_WarningSign_Mat_2
+MRUItem10=/Game/Textures/T_WarningSign_Mat
+MRUItem11=/Game/Character/Animations/ABP_Character
+MRUItem12=/Game/Character/Input/IMC_CharacterMapping
+MRUItem13=/Game/Blueprints/BP_Lava
+MRUItem14=/Game/Models/Platforms/Materials/M_PLATFORM_MOVE_NEON
+MRUItem15=/Game/Blueprints/BP_CheckPoints
+MRUItem16=/Game/Widgets_UI/WB_PlayerHealth
+MRUItem17=/Game/Blueprints/BP_SwingingBall
+MRUItem18=/Game/Models/SpikeBall/Materials/M_SmallBalls
+MRUItem19=/Game/Models/SpikeBall/Materials/M_BaseBall
 
 [DetailCategories]
 LandscapeEditorObject.New Landscape=True
@@ -2774,7 +2776,7 @@ WB_Crosshair_C.Accessibility=True
 WB_Crosshair_C.Clipping=True
 WB_Crosshair_C.Navigation=True
 Button.Layout=True
-Button.Appearance=False
+Button.Appearance=True
 Button.Interaction=True
 Button.Accessibility=True
 Button.Behavior=True
@@ -2951,8 +2953,21 @@ BP_NonDissapearingPlatform_C.WorldPartition=True
 BP_NonDissapearingPlatform_C.Events=True
 BP_NonDissapearingPlatform_C.TransformCommon=True
 BP_NonDissapearingPlatform_C.Networking=True
+WB_Complete_C.Appearance=True
+WB_Complete_C.Input=True
+WB_Complete_C.Interaction=True
+WB_Complete_C.Designer=True
+WB_Complete_C.Performance=True
+WB_Complete_C.Layout=True
+WB_Complete_C.Behavior=True
+WB_Complete_C.Render Transform=True
+WB_Complete_C.Localization=True
+WB_Complete_C.Accessibility=True
+WB_Complete_C.Clipping=True
+WB_Complete_C.Navigation=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/Collecitibles/SM_Clock.SM_Clock;
 RecentlyPlaced=/Game/Blueprints/BP_NonDissapearingPlatform.BP_NonDissapearingPlatform;
 RecentlyPlaced=/Game/Blueprints/BP_DissapearingPlatform.BP_DissapearingPlatform;
 RecentlyPlaced=/Game/Textures/T_WarningSign_Mat_2.T_WarningSign_Mat_2;
@@ -2972,7 +2987,6 @@ RecentlyPlaced=/Game/Blueprints/BP_CheckPoints.BP_CheckPoints;
 RecentlyPlaced=/Game/Models/Drones/SM_DroneLight.SM_DroneLight;
 RecentlyPlaced=/Game/Models/Drones/SK_DroneLight_Skeleton.SK_DroneLight_Skeleton;
 RecentlyPlaced=/Game/Models/Collecitibles/M_MARK_OUT.M_MARK_OUT;
-RecentlyPlaced=/Game/Models/Collecitibles/M_MARK_IN.M_MARK_IN;
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3147,7 +3161,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Classes_Game/FPS_GAME/Public
+ContentBrowserTab1.SelectedPaths=/Game/Character
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3207,11 +3221,11 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [Directories2]
-UNR=../../../../../../Users/natal/Documents/University/Advanced Game Engine/UE5_Assesment/FPS_GAME/Content/Levels
+UNR=G:/Projects/UE5_Assesment/FPS_GAME/Content/Levels
 BRUSH=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBX=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 FBXAnim=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
-GenericImport=../../../../Users/anjum/Desktop/UNI STOFF/btn2.png
+GenericImport=../../../../Users/anjum/Desktop/UNI STOFF/complete.png
 GenericExport=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 GenericOpen=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
 GenericSave=../../../../../../Users/natal/Documents/University/Advanced Game Engine/Assesment/FPS_GAME/Content/
@@ -3222,20 +3236,22 @@ Project=C:/Program Files/Epic Games/UE_5.2/
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=F:/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Jump.AI_Jump,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Look.AI_Look,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Move.AI_Move,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Damage.AI_Damage,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Health.AI_Health,InputMappingContext.Mappings.ActionMappings./Game/Character/Input/AI_Crouch.AI_Crouch
 InputAction=
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
-CameraComponent=
+CameraComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 BP_MainCharacter_C=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values
 CharacterMovementComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
 RectLightComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
 PointLightComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
+K2Node_VariableGet=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
+PropertyWrapper=SkeletalMeshComponent.Physics.ConstraintsGroup,BP_MainCharacter_C.TransformCommon.Transform,BP_MainCharacter_C.Materials.MaterialList,BP_MainCharacter_C.Physics.ConstraintsGroup
 
 [AssetEditorToolkitTabLocation]
 /Game/Character/Input/AI_Look.AI_Look=1
@@ -3322,7 +3338,6 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
-Common=False
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
